--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
               <div class="col-md-6">
                 <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" id="inputCity" required>
               </div>
               <div class="col-md-4">
                 <label for="inputState" class="form-label">State</label>
